--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{	"author":"Nick Sprow",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -11,5 +11,5 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	}
-	"author":"Nick Sprow"
+
 }
